<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseRating</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="course_name">Course Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="comments">Comments</string>
    <string name="major">Required for major</string>
    <string name="gen_ed">General Education Requirement</string>
    <string name="elective">Elective</string>
    <string name="submit">Submit Review</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="enter_review">Enter a Review</string>

</resources>
