<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/course_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/course_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/instructor_text"
        android:layout_below="@+id/course_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/instructor_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/comments_text"
        android:layout_below="@+id/instructor_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/comments"
        android:lines="3" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comments_text"
        android:layout_alignRight="@+id/comments_text"
        android:layout_alignEnd="@+id/comments_text"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:id="@+id/major_button"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_ed"
            android:id="@+id/gened_button"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elective"
            android:id="@+id/elective_button"
            android:longClickable="true"
            android:checked="false" />
    </RadioGroup>

    <RatingBar
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="0.5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonHandler" />

</LinearLayout>
